--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.0",
     "@astrojs/tailwind": "^5.1.5",
+    "@chakra-ui/react": "^2.10.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/inter": "^5.1.1",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "astro": "^5.1.10",
-    "astro-icon": "^1.1.5",
+    "framer-motion": "^12.0.6",
     "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "@types/alpinejs": "^3.13.11"
   }
 }
