--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/inter": "^5.1.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@portabletext/to-html": "^2.0.14",
+    "@sanity/client": "^6.28.2",
     "astro": "^5.1.10",
     "framer-motion": "^12.0.6",
     "tailwindcss": "^3.4.17"
