--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/dist/server/entry.mjs"
+        "dest": "/.vercel/output/functions/_render.func"
       }
     ]
   }
+  
